# Web3QuizGame

./: README.md  package-lock.json  package.json
celo-birthday-frame/: README.md  notes.txt  package-lock.json
celo-birthday-frame/contracts/: argument.js  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
celo-birthday-frame/frontend/: .env.example  package-lock.json  package.json
celo-code-evaluator/: README.md
celo-code-evaluator/backend/: .cursorrules  .env.template  .gitignore  CLAUDE.md  README.md  api.py  main.py  pyproject.toml  requirements.txt  vercel.json
celo-code-evaluator/backend/prompts/: celo.txt  default.txt  report-template.txt
celo-code-evaluator/backend/src/: __init__.py  analyzer.py  cli.py  config.py  fetcher.py  file_parser.py  metrics.py  reporter.py  updated_metrics_formatter.py
celo-code-evaluator/gitspect/: .env.example  README.md  package-lock.json  package.json
celo-projects/: .env.example  README.md  components.json  index.d.ts  package-lock.json  package.json
celo-projects/scripts/: build.js  deploy.js  dev.js
celo-projects/src/: auth.ts
karma-gap-endorsement-frame/: README.md  package-lock.json  package.json
karma-gap-endorsement-frame/src/: utils.ts
proof-of-ship/: .env.example  .gitignore  README.md  package.json  vercel.json
proof-of-ship/prisma/: schema.prisma
proof-of-ship/token/: hardhat.config.ts  (+1 more)
quiz-game/: README.md  package-lock.json  package.json  proxy.js
self-verification-frame/: README.md  env.mjs  netlify.toml  package-lock.json  package.json
v2temp+wordgame/: package.json
(+173 files in other folders)
